--- a/src/pages/CalorieCalculator.css
+++ b/src/pages/CalorieCalculator.css
@@ -3,7 +3,7 @@ span {
 }
 
 .calorie-container {
-  background-image: url("https://cdn.tatlerasia.com/tatlerasia/i/2024/12/07190333-gettyimages-1392660302_cover_1600x1067.jpg");
+  background-image: url("https://images.unsplash.com/photo-1496412705862-e0088f16f791?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-size: cover; /* ปรับขนาดภาพให้เต็มพื้นที่ */
   background-position: center; /* จัดกึ่งกลางภาพ */
   background-repeat: no-repeat; /* ไม่ให้ภาพซ้ำ */
